--- a/about.html
+++ b/about.html
@@ -10,17 +10,12 @@
 
 <body>
     <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="/pages/products.html">Products</a></li>
         <li><a href="/pages/orders.html">Orders</a></li>
         <li><a href="/about.html">About</a></li>
     </ul>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/pages/products.html">Products</a></li>
-        <li><a href="/pages/orders.html">Orders</a></li>
-        <li><a href="/about.html">About</a></li>
-    </ul>
+
     <h1>About</h1>
     <table>
         <caption>Opening hours</caption>
@@ -41,7 +36,7 @@
             <tr>
                 <td>Monday - Friday</td>
                 <td>09:00</td>
-                <td rowspan="2">  21:00</td>
+                <td rowspan="2"> 21:00</td>
             </tr>
             <tr>
                 <td>Saturday</td>
