--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="/pages/products.html">Products</a></li>
         <li><a href="/pages/orders.html">Orders</a></li>
         <li><a href="/about.html">About</a></li>
